src/test/ui/parser/keyword-while-as-identifier.stderr
error: expected pattern, found keyword `while`
  --> $DIR/keyword-while-as-identifier.rs:4:9
   |
LL |     let while = "foo"; //~ error: expected pattern, found keyword `while`
   |         ^^^^^ expected pattern

error: aborting due to previous error

